<resources>
    <string name="app_name">Donation</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_mobile_number">we will send you an one time otp on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="please_enter_the_otp_send_to_you">Please Enter the OTP send to you</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_navigationbar">Navigationbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="donation_system_application">Donation System Application</string>
    <string name="donation_app_enables_anyone_to_safely_and_simply_make_donations_to_different_organizations_and_charity">Donation App enables anyone to safely and simply make donations to different organizations and charity</string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="already_registered">Already registered ?</string>
</resources>